@@ -7,6 +7,7 @@ Click to return to the link:index.html[uthash home page].
 
 Version 1.9.5 (2011-??-??)
 --------------------------
+* utarray now copies the UT_icd on array creation rather than storing a pointer
 * added utarray_renew
 * fixed memory leak in `uthash_clear` when using Bloom filter (thanks, Jan Hättig!)
 * add parentheses to `HASH_ADD` to fix preprocessing of certain arguments (thanks, Aaron Rosen!) 
